tests/NormalTests/paczka1/small_fuzzy/45313225.err
Error in line 1: A235 A235 36,7
Error in line 11: igCHb7Ks S58 69,8
Error in line 5: A235 S51 25,5
Error in line 6: 4cgE8qboidx S51 43,2
